bin_PROGRAMS = bitc
AM_CPPFLAGS = $(DEPS_CFLAGS)
bitc_LDADD = $(DEPS_LIBS) $(CURL_LIBS) $(LEVELDB_LIBS) $(SNAPPY_LIBS)
bitc_LDADD += -lpanel -lform -lstdc++

bitc_CFLAGS  = -O1 -MMD -g
bitc_CFLAGS += -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-missing-field-initializers
bitc_CFLAGS += -fno-omit-frame-pointer
bitc_CFLAGS += -fstack-protector

bitc_SOURCES  = btc-message.c
bitc_SOURCES += ncui.c
bitc_SOURCES += script.c
bitc_SOURCES += bitc_ui.c
bitc_SOURCES += peer.c
bitc_SOURCES += peergroup.c
bitc_SOURCES += addrbook.c
bitc_SOURCES += block-store.c
bitc_SOURCES += hash.c
bitc_SOURCES += fx.c
bitc_SOURCES += base58.c
bitc_SOURCES += bloom.c
bitc_SOURCES += key.c
bitc_SOURCES += txdb.c
bitc_SOURCES += wallet.c
bitc_SOURCES += test.c
bitc_SOURCES += serialize.c
bitc_SOURCES += hashtable.c
bitc_SOURCES += MurmurHash3.c
bitc_SOURCES += util.c
bitc_SOURCES += file.c
bitc_SOURCES += poolworker.c
bitc_SOURCES += config.c
bitc_SOURCES += poll.c
bitc_SOURCES += netasync.c
bitc_SOURCES += main.c
bitc_SOURCES += cJSON.c
bitc_SOURCES += ip_info.c
bitc_SOURCES += crypt.c
bitc_SOURCES += rpc.c
